--- a/valley-chalets/property.html
+++ b/valley-chalets/property.html
@@ -199,22 +199,22 @@
 				
 				<div class="property">
 					<div class="property-image">
-						<a href="property.html" alt="Property image"><img src="images/properties/exterior-street-view.jpg"></a>
+						<a href="properties.html" alt="Property image"><img src="images/properties/exterior-street-view.jpg"></a>
 					</div>
 					<div class="property-copy">
 						<h1>Slopeside</h1>
-						<h2>Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than… <a href="property.html">Read more</a></h2>
+						<h2>Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than… <a href="properties.html">Read more</a></h2>
 					</div>
 					<div class="property-background-2"></div>
 				</div>
 				
 				<div class="property">
 					<div class="property-image">
-						<a href="property.html" alt="Property image"><img src="images/properties/exterior-street-view.jpg"></a>
+						<a href="properties.html" alt="Property image"><img src="images/properties/exterior-street-view.jpg"></a>
 					</div>
 					<div class="property-copy">
 						<h1>Slopeside</h1>
-						<h2>Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than… <a href="property.html">Read more</a></h2>
+						<h2>Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than… <a href="properties.html">Read more</a></h2>
 					</div>
 					<div class="property-background-1"></div>
 				</div>
