--- a/valley-chalets/properties.html
+++ b/valley-chalets/properties.html
@@ -78,7 +78,7 @@
 						<a href="property.html" alt="Property image"><img src="images/properties/exterior-street-view.jpg"></a>
 					</div>
 					<div class="property-copy">
-						<h1>Slopeside</h1>
+						<h1>Momiji</h1>
 						<h2>Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than… <a href="property.html">Read more</a></h2>
 					</div>
 					<div class="property-background-2"></div>
@@ -89,7 +89,7 @@
 						<a href="property.html" alt="Property image"><img src="images/properties/exterior-street-view.jpg"></a>
 					</div>
 					<div class="property-copy">
-						<h1>Slopeside</h1>
+						<h1>Hida Peaks</h1>
 						<h2>Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than… <a href="property.html">Read more</a></h2>
 					</div>
 					<div class="property-background-1"></div>
