--- a/valley-chalets/property.html
+++ b/valley-chalets/property.html
@@ -202,7 +202,7 @@
 						<a href="properties.html" alt="Property image"><img src="images/properties/exterior-street-view.jpg"></a>
 					</div>
 					<div class="property-copy">
-						<h1>Slopeside</h1>
+						<h1>Momiji</h1>
 						<h2>Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than… <a href="properties.html">Read more</a></h2>
 					</div>
 					<div class="property-background-2"></div>
@@ -213,7 +213,7 @@
 						<a href="properties.html" alt="Property image"><img src="images/properties/exterior-street-view.jpg"></a>
 					</div>
 					<div class="property-copy">
-						<h1>Slopeside</h1>
+						<h1>Hida Peaks</h1>
 						<h2>Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than 150 chars. Chalet summary text goes here - less than… <a href="properties.html">Read more</a></h2>
 					</div>
 					<div class="property-background-1"></div>
