--- a/jubilee.html
+++ b/jubilee.html
@@ -161,11 +161,13 @@
 					<div id="mobile-menu-down-padding">
 						<nav>
 							<ul>
-								<li><h1><a href="index.html">Illustration</a></h1></li>
+								<li><h1><a href="index.html">Tenants Toolkit</a></h1></li>
+								<li><h1><a href="momiji.html">Momiji</a></h1></li>
+								<li><h1><a href="illustration.html">Illustration</a></h1></li>
 								<li><h1><a href="hhg-branding.html">HHG Branding</a></h1></li>
-								<li><h1><a href="hhg-websites.html" >HHG websites</a></h1></li>
+								<li><h1><a href="hhg-websites.html">HHG websites</a></h1></li>
 								<li><h1><a href="lightweight.html">Lightweight Media</a></h1></li>
-								<li><h1><a href="jubilee.html" class="active">Official Jubilee Site</a></h1></li>
+								<li><h1><a href="jubilee.html"  class="active">Official Jubilee Site</a></h1></li>
 							</ul>
 						</nav>
 						<div id="get-in-touch-wrapper">
