--- a/hhg-websites.html
+++ b/hhg-websites.html
@@ -161,9 +161,11 @@
 					<div id="mobile-menu-down-padding">
 						<nav>
 							<ul>
-								<li><h1><a href="index.html">Illustration</a></h1></li>
+								<li><h1><a href="index.html">Tenants Toolkit</a></h1></li>
+								<li><h1><a href="momiji.html">Momiji</a></h1></li>
+								<li><h1><a href="illustration.html">Illustration</a></h1></li>
 								<li><h1><a href="hhg-branding.html">HHG Branding</a></h1></li>
-								<li><h1><a href="hhg-websites.html" class="active">HHG websites</a></h1></li>
+								<li><h1><a href="hhg-websites.html"  class="active">HHG websites</a></h1></li>
 								<li><h1><a href="lightweight.html">Lightweight Media</a></h1></li>
 								<li><h1><a href="jubilee.html">Official Jubilee Site</a></h1></li>
 							</ul>
