--- a/momiji.html
+++ b/momiji.html
@@ -1,9 +1,9 @@
- <!doctype html>
-<html class="no-js light" lang="">
+<!doctype html>
+<html class="no-js dark" lang="">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Digitalpath Creative</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         
@@ -21,18 +21,14 @@
 		<link rel="stylesheet" href="js/vendor/ie7/ie7.css">
 		<!--<![endif]-->
 		
-		
-		 
-		 
-		
     </head>
     <body>
 		
 		<script>
 			
 			var backgrounds = new Array(
-			'url(img/hhg-branding-1.jpg) no-repeat center center',
-			'url(img/hhg-branding-2.jpg) no-repeat center center'
+			'url(img/momiji-1.jpg) no-repeat center center',
+			'url(img/momiji-2.jpg) no-repeat center center'
 			);
 		
 		</script>
@@ -46,7 +42,7 @@
 			<div class="info-overlay">
 				<div class="info-title">
 					<div class="info-panel-padding">
-						<h2>HHG Branding</h2>
+						<h2>Momiji branding and website</h2>
 						<div class="icon-close-wrapper">
 							<span class="icon-close"></span>
 						</div>
@@ -60,7 +56,7 @@
 					</div>
 					<div class="info-panel-right">
 						<div class="info-panel-padding">
-							<p>9/2013 - ongoing</p>
+							<p>1/2018</p>
 						</div>
 					</div>
 				</div>
@@ -73,7 +69,7 @@
 				</div>
 				<div class="info-panel-right bottom">
 					<div class="info-panel-padding">
-						<p>Brochures, posters, banners, business cards. Logo’s existed previously, but the branding was brought together with new font, and brand colours.</p>
+						<p>Branding and illustration, and design and coding of responsive layout. Momiji is a ski lodge located in the Hakuba valley, Japan.</p><p><a href="http://momiji.haku.ba/">Momiji website</a></p>
 					</div>
 				</div>
 			</div>
@@ -161,7 +157,7 @@
 					<div id="lockup">
 						<a href="index.html">
 							<svg class="icon-logo large-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024"><path d="M621 644.7c-64.6 0-129.2-24.5-178.4-73.7l36.4-36.4c78.2 78.2 205.7 78.2 283.9 0s78.2-205.7 0-283.9l36.4-36.4c98.3 98.3 98.3 258.4 0 356.6C750.1 620 685.6 644.7 621 644.7L621 644.7zM621 720.2c-87.6 0-169.9-34-231.7-95.9l36.4-36.4c52.1 52.1 121.6 80.9 195.3 80.9s143.2-28.8 195.3-80.9c52.1-52.1 80.9-121.6 80.9-195.3s-28.8-143.2-80.9-195.3l36.4-36.4c61.9 61.9 95.9 144.2 95.9 231.7s-34 169.9-95.9 231.7S708.5 720.2 621 720.2zM621 795.5c-103.3 0-206.4-39.3-285-117.9l36.4-36.4c137.2 137.2 360.3 137.2 497.5 0s137.2-360.3 0-497.5l36.4-36.4c157.2 157.2 157.2 413.1 0 570.3C827.4 756.2 724.3 795.5 621 795.5L621 795.5zM224.8 785.6c-98.3-98.3-98.3-258.4 0-356.6s258.4-98.3 356.6 0l-36.2 36.4c-78.2-78.2-205.7-78.2-283.9 0s-78.2 205.7 0 283.9L224.8 785.6 224.8 785.6zM171.5 839.1c-127.8-127.8-127.8-335.6 0-463.5s335.6-127.8 463.5 0L598.6 412c-107.8-107.8-282.9-107.8-390.7 0s-107.8 282.9 0 390.7L171.5 839.1 171.5 839.1zM118.2 892.4C41.9 816.3 0.1 714.9 0.1 607.3c0-107.8 42-209 118.1-285s177.4-118.1 285-118.1c107.8 0 209 42 285 118.1l-36.4 36.4c-66.3-66.3-154.7-102.9-248.7-102.9s-182.3 36.6-248.7 102.9C88 425 51.5 513.4 51.5 607.3S88 789.6 154.4 856L118.2 892.4 118.2 892.4z"/></svg>
-						</a>       
+						</a>        
 					<div id="logo-text">
 					<h1><a href="">Digitalpath</a></h1>
 					<h1><a href="">Creative</a></h1>
@@ -175,9 +171,9 @@
 						<nav>
 							<ul>
 								<li><h1><a href="index.html">Tenants Toolkit</a></h1></li>
-								<li><h1><a href="momiji.html">Momiji</a></h1></li>
+								<li><h1><a href="momiji.html" class="active">Momiji</a></h1></li>
 								<li><h1><a href="illustration.html">Illustration</a></h1></li>
-								<li><h1><a href="hhg-branding.html"  class="active">HHG Branding</a></h1></li>
+								<li><h1><a href="hhg-branding.html">HHG Branding</a></h1></li>
 								<li><h1><a href="hhg-websites.html">HHG websites</a></h1></li>
 								<li><h1><a href="lightweight.html">Lightweight Media</a></h1></li>
 								<li><h1><a href="jubilee.html">Official Jubilee Site</a></h1></li>
@@ -195,7 +191,7 @@
 		
 		</div>
 		
-		<p id="copyright">© 2015 Digitalpath Creative.<br>All rights reserved.</p> 
+		<p id="copyright">© 2019 Digitalpath Creative.<br>All rights reserved.</p> 
 		
 		
 
