--- a/momiji.html
+++ b/momiji.html
@@ -69,7 +69,7 @@
 				</div>
 				<div class="info-panel-right bottom">
 					<div class="info-panel-padding">
-						<p>Branding and illustration, and design and coding of responsive layout. Momiji is a ski lodge located in the Hakuba valley, Japan.</p><p><a href="http://momiji.haku.ba/">Momiji website</a></p>
+						<p>Branding and illustration, and also the design and coding of responsive layout. Momiji is a ski lodge located in the Hakuba valley, Japan.</p><p><a href="http://momiji.haku.ba/">Momiji website</a></p>
 					</div>
 				</div>
 			</div>
