--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</div>
 				<div class="info-panel-right bottom">
 					<div class="info-panel-padding">
-						<p>Branding and illustrations, as well as design and coding of responsive layout. Also provided a CMS system for site updates. The toolkit aims to support both tenants and landlords in Bromley's private rental sector.</p><p><a href="http://www.tenantandlandlordtoolkit.co.uk/">Toolkit website</a></p>
+						<p>Branding and illustrations, as well as design and coding of responsive layout. I also provided a CMS system for site updates. The toolkit aims to support both tenants and landlords in Bromley's private rental sector.</p><p><a href="http://www.tenantandlandlordtoolkit.co.uk/">Toolkit website</a></p>
 					</div>
 				</div>
 			</div>
